Configuracion final